--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 20200619
+        versionName "1.0.0-beta1"
     }
 
     buildTypes {
